# praxis

./: .dockerignore  .gitignore  .timefly-ai-queue.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  VISION.md  deny.toml  docker-compose.yml  forge.toml  launch.ps1  progress.md  release-please-config.json  rust-toolchain.toml
.agents/prompts/: prompt-gemma.md  prompt-glm.md  prompt-qwen.md
.agents/skills/clean-architecture/: SKILL.md
.forge/: jwt.secret
.github/workflows/: ci.yml  docker.yml  release-please.yml  release.yml
crates/agent-traits/: Cargo.toml
crates/agent-traits/src/: lib.rs  memory.rs  persistence.rs  provider.rs  tool.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: agent.rs  deploy.rs  init.rs  mod.rs  watch.rs
crates/core/: Cargo.toml
crates/core/agents/: architect.md  coder.md  explorer.md  git.md  researcher.md  reviewer.md  security.md  tester.md
crates/core/benches/: loop_throughput.rs
crates/core/src/: bus.rs  completion.rs  config.rs  delegation.rs  integration_tests.rs  lib.rs  pipeline.rs  rbac.rs  rollback.rs  runtime.rs  skills.rs  undo.rs
crates/core/src/actor/: agent.rs  echo.rs  mod.rs  supervisor.rs
crates/core/src/actor/roles/: architect.rs  base.rs  coder.rs  drift_guard.rs  git.rs  memory_keeper.rs  mod.rs  researcher.rs  reviewer.rs  security.rs  summarizer.rs  tester.rs
crates/core/src/agents/: definition.rs  mod.rs  registry.rs
crates/core/src/api/: auth.rs  mod.rs  pairing.rs  routes.rs  ws.rs
crates/core/src/drift/: asi.rs  metrics.rs  mod.rs  recovery.rs
crates/core/src/loop/: controller.rs  divergence.rs  limits.rs  mod.rs  pathology.rs
crates/core/src/machine/: gate.rs  mod.rs  phase.rs  transition.rs
crates/core/src/orchestrator/: injection.rs  mod.rs  roles.rs  task.rs  verification.rs
crates/core/src/workflow/: goal.rs  mod.rs  workflow.rs
crates/mcp-host/: Cargo.toml
crates/mcp-host/src/: lib.rs  registry.rs
crates/mcp-host/src/protocol/: initialize.rs  messages.rs  mod.rs
crates/mcp-host/src/transport/: mod.rs  sse.rs  stdio.rs
crates/memory/: Cargo.toml
crates/memory/src/: cache.rs  chunker.rs  consolidated.rs  context.rs  embedding.rs  episodic.rs  hot.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  sqlite.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai.rs  openai_compat.rs  router.rs  tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: budget.rs  config.rs  error.rs  lib.rs  protocol.rs  tenant.rs  types.rs
crates/vault/: Cargo.toml
crates/vault/src/: env.rs  keyring.rs  lib.rs  service.rs  tauri_store.rs
dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
dashboard/e2e/: dashboard.spec.ts
dashboard/src/: App.vue  env.d.ts  style.css
dashboard/src/components/: LiveMonitorPanel.vue  OnboardingOverlay.vue  ProviderConfig.vue  ReloadPrompt.vue  SessionTimeline.vue
dashboard/src/components/dashboard/: AgentHealth.vue  AgentsConfig.vue  ProjectConfig.vue  RemoteConnections.vue  TokenChart.vue
dashboard/src/components/layout/: StatusBar.vue  TitleBar.vue
dashboard/src/components/ui/: Badge.vue  Button.vue  Card.vue  EmptyState.vue  Icon.vue  Input.vue  MetricCard.vue  ThinkingIndicator.vue  ToastContainer.vue  TypingDots.vue
dashboard/src/composables/: useApi.ts  useApiStatus.ts  useLiveMonitor.ts  usePwaNotifications.ts  useTauriIpc.ts  useTheme.ts  useWebSocket.ts
dashboard/src/router/: index.ts
dashboard/src/stores/: app.ts
dashboard/src/views/: AgentsView.vue  CostAnalysisView.vue  DashboardView.vue  LoginView.vue  LogsView.vue  NotFoundView.vue  PipelineView.vue  ProjectChatView.vue  SessionCompareView.vue  SessionView.vue  SessionsView.vue  SettingsDialog.vue  SettingsView.vue
deploy/: praxis-config.toml  praxis.service
desktop/: .ignore  Cargo.toml  tauri.conf.json  updater-private-key.pem.pub
desktop/capabilities/: default.json
desktop/frontend/: .gitignore  index.html  package.json  playwright.config.ts  vite.config.ts
desktop/frontend/src/: App.vue  main.ts  style.css
desktop/frontend/src/components/: LiveMonitorPanel.vue  OnboardingOverlay.vue  SessionTimeline.vue
desktop/frontend/src/components/dashboard/: ConnectionIndicator.vue  ContextPanel.vue  InjectPanel.vue  ProjectConfig.vue
desktop/frontend/src/components/ui/: Icon.vue  ToastContainer.vue
desktop/frontend/src/composables/: useApi.ts  useConnection.ts  useToast.ts  useUpdater.ts  useWebSocket.ts
desktop/frontend/src/views/: AgentDebugView.vue  GoalLibraryView.vue  LoginView.vue  MemoryBrowserView.vue  ProjectChatView.vue  SettingsDialog.vue
desktop/icons/: generate_icon.py
desktop/src/: commands.rs  events.rs  main.rs
docs/: competitor-analysis-market.md  competitor-analysis-opencode.md  innovation-proposals.md
docs/adr/: 000-architecture-overview.md
docs/guides/: cli.md  configuration.md  installation.md  quickstart.md
mcp-servers/filesystem/: Cargo.toml
mcp-servers/filesystem/src/: main.rs
mcp-servers/git-local/: Cargo.toml
mcp-servers/git-local/src/: main.rs
mcp-servers/github/: Cargo.toml
mcp-servers/github/src/: main.rs
mcp-servers/web-search/: Cargo.toml
mcp-servers/web-search/src/: main.rs
scripts/: dev.ps1  dev.sh  install.sh
test-proj/: forge.toml
tests/: Cargo.toml  api_e2e.rs  cli_e2e.rs  pipeline_e2e.rs  vault_e2e.rs
