[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/agent-traits",
    "crates/providers",
    "crates/mcp-host",
    "crates/memory",
    "crates/persistence",
    "crates/vault",
    "crates/cli",
    "crates/shared",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ractor = "0.7"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
qdrant-client = "1.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
tiktoken-rs = "0.6"
self_update = "0.41"
colored = "3"
indicatif = "0.17"
ratatui = "0.29"
criterion = { version = "0.5", features = ["async_futures"] }
rand = "0.8"
refinery = { version = "0.9", features = ["rusqlite"] }
mockall = "0.13"
async-trait = "0.1"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true