[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/agent-traits",
    "crates/providers",
    "crates/mcp-host",
    "crates/memory",
    "crates/persistence",
    "crates/vault",
    "crates/cli",
    "crates/shared",
    "desktop",
    "tests",
    "mcp-servers/filesystem",
    "mcp-servers/git-local",
    "mcp-servers/github",
    "mcp-servers/web-search",
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
ractor = "0.15.13"
dashmap = "6"
moka = { version = "0.12.15", features = ["sync"] }
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
qdrant-client = "1.18.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
tiktoken-rs = "0.12.0"
self_update = "0.44"
colored = "3.1.1"
indicatif = "0.18.6"
ratatui = "0.30.2"
criterion = { version = "0.8", features = ["async_futures"] }
rand = "0.10"
refinery = { version = "0.9.2", features = ["rusqlite"] }
mockall = "0.15"
async-trait = "0.1.89"
toml = "1.1.2"
serde_yaml_neo = "0.11.0"
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
futures-util = "0.3.32"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
qrcode = { version = "0.14.1", features = ["svg"] }
gethostname = "1.1.0"
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
