[package]
name = "praxis-e2e"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "cli_e2e"
path = "cli_e2e.rs"

[[test]]
name = "api_e2e"
path = "api_e2e.rs"

[[test]]
name = "pipeline_e2e"
path = "pipeline_e2e.rs"

[[test]]
name = "vault_e2e"
path = "vault_e2e.rs"

[dev-dependencies]
praxis-core = { path = "../crates/core" }
praxis-shared = { path = "../crates/shared" }
praxis-memory = { path = "../crates/memory" }
praxis-persistence = { path = "../crates/persistence" }
praxis-providers = { path = "../crates/providers" }
praxis-agent-traits = { path = "../crates/agent-traits" }
praxis-vault = { path = "../crates/vault" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util.workspace = true
axum.workspace = true
tower-http.workspace = true
