[package]
name = "praxis-agent-traits"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
praxis-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
chrono.workspace = true
