[package]
name = "praxis-cli"
version = "0.2.0"
edition = "2024"
license = "Proprietary"

[dependencies]
praxis-core = { path = "../core" }
praxis-shared = { path = "../shared" }
praxis-persistence = { path = "../persistence" }
praxis-providers = { path = "../providers" }
praxis-agent-traits = { path = "../agent-traits" }
praxis-memory = { path = "../memory" }
praxis-vault = { path = "../vault" }

clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
colored.workspace = true
indicatif.workspace = true
self_update.workspace = true
ratatui.workspace = true
uuid.workspace = true
toml.workspace = true
chrono.workspace = true

[[bin]]
name = "praxis"
path = "src/main.rs"