[package]
name = "praxis-core"
version = "0.5.0"
edition = "2024"
license = "Proprietary"

[dependencies]
praxis-shared = { path = "../shared" }
praxis-agent-traits = { path = "../agent-traits" }
praxis-providers = { path = "../providers" }
praxis-mcp-host = { path = "../mcp-host" }
praxis-memory = { path = "../memory" }
praxis-persistence = { path = "../persistence" }
praxis-vault = { path = "../vault" }

ractor.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dashmap.workspace = true
chrono.workspace = true
rand.workspace = true
async-trait.workspace = true
axum.workspace = true
tower-http.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
toml.workspace = true
serde_yaml.workspace = true
qrcode.workspace = true
gethostname.workspace = true

[dev-dependencies]
tempfile.workspace = true
