[package]
name = "praxis-mcp-host"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
praxis-shared = { path = "../shared" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
futures-util.workspace = true