[package]
name = "praxis-memory"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
praxis-shared = { path = "../shared" }
praxis-agent-traits = { path = "../agent-traits" }

async-trait.workspace = true
dashmap.workspace = true
moka.workspace = true
qdrant-client.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
