[package]
name = "praxis-providers"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
praxis-shared = { path = "../shared" }
praxis-agent-traits = { path = "../agent-traits" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tiktoken-rs.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-util = "0.3"
