[package]
name = "project-x-vault"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
project-x-shared = { path = "../shared" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Encryption for secure credential storage
aes-gcm = { version = "0.10", features = ["std"] }
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]