[package]
name = "praxis-vault"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
praxis-shared = { path = "../shared" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Encryption for secure credential storage
aes-gcm = "0.11.0"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
